# qiniu-Hackathon

./: .dockerignore  .gitignore  APPLICATION_TESTING_SUMMARY.md  COMPLETE_INTEGRITY_TEST_REPORT.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  FUNCTIONAL_VERIFICATION_REPORT.md  HIGH_AVAILABILITY_DEPLOYMENT.md  INTEGRITY_TEST_GUIDE.md  MCP_CONFIG_GUIDE.md  README.md  TESTING_GUIDE.md  TEST_REPORT.md  api_examples.py  claude_desktop_config.json  comprehensive_test_demo.py  docker-compose.yml  example_usage.md  integrity_test_demo.py  itinerary_api_examples.py  nginx.conf  pyproject.toml  requirements.txt  start.bat  start.sh  test_destination_reminder.py  test_itinerary_demo.py  test_speed_monitor.py  test_transportation.py  test_travel_guide.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  service.yaml
src/: ai_navigator_api.py  auto_scaler.py  destination_reminder.py  exception_handler.py  map_navigator_mcp.py  performance_monitor.py  romantic_surprise.py  speed_monitor.py  sre_notifier.py  structured_logger.py  transportation_recommender.py  travel_guide.py  travel_itinerary.py
static/: index.html
